fixes the mis-alignment of the line across the article header after the font size update

--- a/scss/_component.article.scss
+++ b/scss/_component.article.scss
@@ -30,7 +30,7 @@
 
   &::after {
     position: absolute;
-    top: 1.1em; // 22px / 20px
+    top: 1.25em; // 25px / 20px
     right: 0;
     left: 0;
     z-index: -1;
